--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <script>
-        // 1ci tapsiriq 
+        // 1ci tapsiriq ////////////////////////////////////////////
 
 
         // let arr=[1,25,244,44,55,22,64]
@@ -26,14 +26,14 @@
         // console.log(orta(arr));
 
 
-        // 2 ci tap
+        // 2 ci tap ///////////////////////////////////////////////
 
         // let arr=[1,5,2,7]
         // let num=12
         // arr.push(num)
         // console.log(arr);
 
-        // 3cu tap
+        // 3cu tap  ///////////////////////////////////////////////////////
 
         // let str="Salam Necesen"
         // let count=0
@@ -50,37 +50,62 @@
         // }
         // console.log(sayi(str));
 
-        // 4cu tap
 
 
-        let word = "saLam"
-        let checkUpper = false
-        let checkLower = false
-        function my(word) {
-            for (let i = 0; i < word.length; i++) {
-                if (word[i].toUpperCase() == word[i]) {
-                    checkUpper = true
-
-                }
-                if (word[i].toLowerCase() == word[i]) {
-                    checkLower = true
-
-                }
-                if (checkLower && checkUpper) {
 
 
-                    return true;
-                    break;
-                }
+        // 4cu tap /////////////////////////////////////////////////
 
-            }
-        }
+
+        // let word = "salLam"
+        // let checkUpper = ()
+        // let checkLower = ()
+        // function my(word) {
+        //     for (let i = 0; i < word.length; i++) {
+        //         if (word[i].toUpperCase() == word[i]) {
+        //             checkUpper = true
+
+        //         }
+        //         if (word[i].toLowerCase() == word[i]) {
+        //             checkLower = true
+
+        //         }
+        //         if (checkLower && checkUpper) {
+
+
+        //             return true;
+        //             break;
+        //         }
+
+        //     }
+        // }
+        // console.log(my(word));
 
 
 
 //     let myGreeting = 'Hey there!';
 
 // console.log(myGreeting.toLowerCase());
+
+
+
+let str='this is';
+var character='';
+for (let i = 0; i <=str.length; i++) {
+    if (character==character.toUpperCase()) {
+        console.log('upper case true');
+        
+    }
+   
+    if (character==character.toLowerCase()) {
+        console.log('lower case true');
+        
+    }
+    // if (character.toLowerCase && character.toUpperCase) {
+    //     console.log(' true');
+    // }
+    break
+}
 
     </script>
 </body>
